Fixed sticky table issue (heading was hidden by pause animation control).  Also fixing aXe issues.

--- a/less/shared/landmarks.less
+++ b/less/shared/landmarks.less
@@ -162,6 +162,7 @@ aside,
   min-height: (139 / @px);
   border: solid 1px black;
   box-shadow: 4px 4px 0 black;
+  line-height: 1.4;
   
   max-width: 1024px;
 
