--- a/less/table.less
+++ b/less/table.less
@@ -50,7 +50,7 @@
         th[scope="col"],
         [role="columnheader"] {    
             .sticky();
-            top: 0;
+            top: (38/@px);
         }
 
         th[scope="row"],
